[package]
name = "hub"
version = "0.4.6-rc1"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.8.0"
prost = "0.12.3"
wasm-bindgen = "0.2.91"
tokio_with_wasm = "0.4.3"
imap = "3.0.0-alpha.14"
lettre = "0.11.7"
native-tls = "0.2.11"
mailparse = "0.15.0"
base64 = "0.22.1"
mime_guess = "2.0.4"
