[package]
name = "hub"
version = "0.5.9"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
dirs = "5.0.1"
imap = "3.0.0-alpha.14"
lettre = "0.11.7"
mailparse = "0.15.0"
mime_guess = "2.0.4"
native-tls = "0.2.11"
prost = "0.12.3"
rinf = "6.10.0"
tokio_with_wasm = "^0.4.3"
wasm-bindgen = "0.2.91"
